# N0Tune

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  mypy.ini  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_issue.yml  feature_request.yml  security_report.md
.github/workflows/: ci.yml  release.yml  security.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 20260516_0001_initial_schema.py  20260517_0002_permissions_and_audit.py  20260518_0003_memory_lifecycle_and_scope.py  20260519_0004_alignment_rules.py  20260524_0005_project_context.py
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/db/: README.md  session.py
apps/api/app/models/: README.md  entities.py
apps/api/app/routes/: alignment.py  api_keys.py  audit_logs.py  cache.py  chat.py  context.py  documents.py  health.py  memories.py  openai_proxy.py  projects.py  style.py
apps/api/app/schemas/: README.md  api.py
apps/api/app/services/: project_context.py
apps/api/app/services/alignment/: __init__.py  rules.py
apps/api/app/services/cache/: README.md  semantic.py
apps/api/app/services/context/: README.md  compiler.py  embedding.py  lexical.py
apps/api/app/services/memory/: README.md  consolidation.py  extraction.py  lifecycle.py
apps/api/app/services/observability/: langfuse.py
apps/api/app/services/providers/: README.md  router.py
apps/api/app/services/rag/: README.md  chunking.py
apps/api/app/services/security/: README.md  api_keys.py  audit.py  auth.py  injection.py  permissions.py  rate_limit.py  secrets.py
apps/api/app/tests/: conftest.py  test_adaptive_persona.py  test_alignment_endpoint.py  test_alignment_rule_engine.py  test_api_mvp.py  test_compiler_internals.py  test_hardening.py  test_health.py  test_memory_consolidation.py  test_memory_lifecycle.py  test_permissions_and_audit.py  test_project_context.py  test_provider_router.py
apps/api/app/workers/: README.md
apps/dashboard/: Dockerfile  README.md  eslint.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/components/: dashboard-app.tsx  design-system.tsx  service-status.tsx
apps/dashboard/e2e/: dashboard.spec.ts
apps/dashboard/lib/: config.ts
apps/dashboard/tests/: page.test.ts
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/public/: logo.png.README.md
apps/desktop/src/: App.tsx  backend.ts  main.tsx  providers.ts  styles.css  tauri-bridge.ts  types.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  secrets.rs  storage.rs
apps/desktop/src/components/: Chat.tsx  ContextPreview.tsx  MemoryViewer.tsx  Onboarding.tsx  PersonaSettings.tsx  ProviderSettings.tsx  QuickRemember.tsx  Sidebar.tsx  StatusOverlay.tsx
apps/desktop/tests/: backend.test.ts
apps/extension/: README.md  package.json  popup.html  tsconfig.json  vite.config.ts
apps/extension/public/: manifest.json
docs/: alignment-checker.md  api.md  architecture.md  audit-logs.md  backup-restore.md  benchmarks.md  cli-project-workflow.md  codex-handover.md  concept-alignment.md  connectors.md  context-compiler.md  context-guard.md  context-tuning.md  cross-tool-workflows.md  dashboard-gap-analysis.md  dashboard-project-context.md  deployment-security.md  desktop-architecture.md  docs-style-guide.md  dogfood-evidence.md  dogfooding-alignment.md  dogfooding-cross-tool.md  dogfooding.md  editions.md  evaluations.md  floating-widget.md  handoff-capsules.md  how-it-works.md  install.md  k8s.md  local-mode.md  maintainers.md  mcp-project-context.md  mcp.md  memory-lifecycle.md  memory-scopes.md  observability.md  overview.md  permissions.md  persona-format.md  (+20 more)
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md
evals/: README.md  __main__.py  harness.py
evals/answer_quality_eval/: README.md
evals/context_compression_eval/: README.md
evals/memory_relevance_eval/: README.md
evals/prompt_injection_eval/: README.md
evals/semantic_cache_eval/: README.md
evals/token_savings_eval/: run.py  scenarios.json
examples/claude-mcp/: README.md
examples/desktop-personal-ai/: README.md
examples/local-ollama/: README.md
examples/nextjs-chatbot/: README.md
examples/openai-compatible-proxy/: README.md
examples/personalized-rag-demo/: README.md
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/src/n0tune_langchain/: __init__.py  memory.py  retriever.py
integrations/langchain/tests/: test_integration.py
integrations/llamaindex/: README.md  pyproject.toml
integrations/llamaindex/tests/: test_integration.py
integrations/markdown-folder/: README.md  pyproject.toml
integrations/markdown-folder/src/n0tune_markdown_folder/: __init__.py  cli.py  sync.py
integrations/markdown-folder/tests/: test_sync.py
integrations/mcp-server/: README.md  package.json
integrations/mcp-server/src/: server.mjs
integrations/mcp-server/tests/: server.test.mjs
integrations/vercel-ai-sdk/: README.md  package.json  tsconfig.json
integrations/vercel-ai-sdk/src/: index.ts
integrations/vercel-ai-sdk/tests/: index.test.ts
personas/: README.md  developer-mentor.n0tune.json  marketing-lead.n0tune.json  schema.json  senior-staff-eng.n0tune.json  startup-advisor.n0tune.json  study-buddy.n0tune.json  writing-coach.n0tune.json
scripts/: README.md  bench_smoke.py  check-mvp.ps1  check-phase0.ps1  gen-icons.py  run_contamination_and_style.py  run_matrix.py  seed-alignment-rules.py  seed-dogfooding.ps1  seed_docs.py  seed_industries.py  smoke-mvp.ps1  sync-mcp-config.mjs
(+19 files in other folders)
