[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "n0tune-markdown-folder"
version = "0.1.3"
description = "Sync a folder of Markdown files into N0Tune documents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "N0Tune contributors" }]
keywords = ["n0tune", "connector", "markdown", "rag"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "n0tune>=0.1.0,<0.2",
]

[project.scripts]
n0tune-markdown-sync = "n0tune_markdown_folder.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.13,<2.0",
    "pytest>=9.0.3,<10.0",
    "ruff>=0.7,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["n0tune_markdown_folder*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["B008", "S101"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
