[package]
name = "n0tune-desktop"
version = "0.1.0"
description = "N0Tune Desktop — personal AI runtime."
authors = ["N0Tune contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "n0tune_desktop_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"

# Global-shortcut is a desktop-only plugin in Tauri 2; gate on cfg(desktop)
# so iOS / Android targets don't try to compile it.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
