[package]
name = "n0tune-desktop"
version = "0.1.0"
description = "N0Tune Desktop — personal AI runtime."
authors = ["N0Tune contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "n0tune_desktop_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
once_cell = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
